--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
 
-    <script>
-        alert('Hellow world');
-    </script>
+    <script src="./index2-4.js"></script>
 
 </body>
 </html>
